some minor changes

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # MONGO_URI=your_mongodb_connection_string
-JWT_SECRET=supersecretkey123
+JWT_SECRET="secret"
 CLOUDINARY_CLOUD_NAME=dhyxjnmup
 CLOUDINARY_API_KEY=144158463261939
 CLOUDINARY_API_SECRET=xzzfpzru5qn-IV-X3PimroUS6bk
